--- a/index.html
+++ b/index.html
@@ -133,5 +133,7 @@
 <center><p class="actors">Title: hard wired<br>was realesed on june 2008<br>actors:jonny adam,jenny kend and Dalida<br>categorie:Love movie</p></center>
 </div>
 </div>
+ <footer style="background:black;height:50px;"><center><p style="color:white;">Dresigned by byagutangaza</p></center></footer>
+
 </body>
 </html>
